fixed login and overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,14 @@
 #main-container {
     flex: 1;
     min-height: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 95vw;
+    height: 95vh;
     justify-content: center;
-    overflow-y: auto;
+    overflow:hidden;
+}
+
+#sidenav {
+    margin-bottom: 4rem;
 }
 
 .title {
@@ -50,13 +54,20 @@
 
 .sidenav-container {
     margin: auto;
-    padding-bottom: 4rem;
     max-width: 96vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    height: 100%;
 }
 
 .expansion-text {
     text-align: justify;
     font-size: 1rem;
+}
+
+.app-root {
+    height: 100%;
+    margin-bottom: 0;
 }
 
 @media screen and (orientation: landscape) and (min-width: 550px) {
